<resources>
    <string name="app_name">Smart planner</string>

    <string name="tab_1_current_day">Current day</string>
    <string name="tab_2_daily_schedule">Daily Schedule</string>
    <string name="ic_daily_schedule">Schedule</string>
    <string name="tab_3_planning">Planning</string>
    <string name="tab_4_weather">Weather</string>

    <string name="fragment_1_name">Tasks for today</string>

    <string name="add_task">Add task</string>
    <string name="add_task_name">Name</string>
    <string name="add_task_date">Date</string>
    <string name="add_task_time_from">From</string>
    <string name="add_task_time_to">To</string>
    <string name="add_task_description">Description</string>
    <string name="add_task_location">Location</string>
    <string name="add_task_show_map">To show on the map</string>
    <string name="add_task_Importance">Importance:</string>
    <string name="add_task_snap">Snap contact</string>
    <string name="add_task_name_contact">Contact name</string>
    <string name="add_task_add_to_calendar">Add to calendar</string>
    <string name="add_task_save">Save</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="completed">Completed</string>
    <string name="completedTasks">tasks</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="importance">Importance:</string>
    <string name="tied_contact">Tied contact:</string>
    <string name="address">Address:</string>
    <string name="not_done">Not done</string>
    <string name="done">Done</string>
    <string name="showMap">To show on the map</string>
    <string name="google_android_map_api_key">AIzaSyDcd6upxUfS8B8M1eRUMAvVY9BRyAz7Deg</string>
    <string name="hide_map">Hide map</string>
    <string name="ed_pressure"> mm Hg</string>

    <string name="feels_like">feels Like:</string>
    <string name="wind_ms_north"> m/s north</string>
    <string name="wind_ms_north_east"> m/s north-east</string>
    <string name="wind_ms_east"> m/s east</string>
    <string name="wind_ms_southeast"> m/s southeast</string>
    <string name="wind_ms_south"> m/s south</string>
    <string name="wind_ms_southwest"> m/s southwest</string>
    <string name="wind_ms_west"> m/s west</string>
    <string name="wind_ms_northwest"> m/s northwest</string>

    <string-array name="importance">
        <item></item>
        <item>Important and urgent</item>
        <item>Important, but not urgent</item>
        <item>Not important, but urgent</item>
        <item>Not important and not urgent</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_task">Show task</string>
    <string name="selection_calendar">Select a calendar</string>
    <string name="to_edit">Edit</string>
    <string name="edit_task">Edit task</string>
    <string name="location_request_explanation">Location permissions are needed to get the weather forecast for your location.</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="no_tasks_for_the_selected_day">There are no tasks for the selected day</string>
    <string name="there_are_no_tasks_for_today">There are no tasks for today</string>
    <string name="server_is_temporarily_unavailable">The server is temporarily unavailable. Check your network connection.</string>
    <string name="no_internet_connection">No internet connection. Check your network connection.</string>
    <string name="no_show_address">The current address cannot be shown on the map. Change it.</string>
    <string name="result_saved">saved</string>
    <string name="result_error_saved">save error</string>
    <string name="result_saved_and_added">saved and added to the calendar</string>
    <string name="result_saved_but_no_added">saved, but there was an error adding to the calendar</string>
    <string name="is_empty">is empty. </string>
    <string name="field">Field  </string>
    <string name="result_default_city">Weather received for the last saved city because your location is undefined</string>
    <string name="week_undefined">Day of the week is undefined</string>
</resources>
