<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel" type="com.ivanasharov.smartplanner.presentation.viewModel.AddTaskViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fon_add_task"
        tools:context=".presentation.view.AddTaskFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/design_default_color_on_primary"
                android:hint="@string/add_task_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@={viewModel.taskUI.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/design_default_color_background"
                android:hint="@string/add_task_description"
                android:text="@={viewModel.taskUI.description}"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText">


                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:background="@color/design_default_color_background"
                    android:hint="@string/add_task_date"
                    android:text="@{viewModel.taskUI.date}"
                    />

                <TextView
                    android:id="@+id/time1TextView"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_background"
                    android:hint="@string/add_task_time_from"
                    android:text="@{viewModel.taskUI.timeFrom}" />

                <TextView
                    android:id="@+id/time2TextView"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_background"
                    android:hint="@string/add_task_time_to"
                    android:text="@{viewModel.taskUI.timeTo}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                <TextView
                    android:id="@+id/textViewATActivity"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_weight="2"
                    android:text="@string/add_task_Importance"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/text_size_title" />

                <Spinner
                    android:id="@+id/importanceSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/design_default_color_background" />
            </LinearLayout>

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/design_default_color_background"
                android:hint="@string/add_task_location"
                android:text="@={viewModel.taskUI.address}"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressEditText">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/add_task_snap"
                    android:textSize="@dimen/text_size_title" />

                <CheckBox
                    android:id="@+id/addContactCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:checked="@={viewModel.isSnapContact()}"
                    android:layout_weight="1" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/contactSpinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"

                android:background="@color/design_default_color_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.387"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactSpinner">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/add_task_add_to_calendar"
                    android:textSize="@dimen/text_size_title" />

                <CheckBox
                    android:id="@+id/addCalendarAndroidCheckBox"
                    android:layout_width="0dp"
                    android:checked="@={viewModel.isAddToCalendar()}"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="192dp"
                android:layout_height="58dp"
                android:layout_marginStart="171dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="152dp"
                android:layout_marginBottom="16dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/add_task_save"
                android:textSize="@dimen/text_size_button_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>